<resources>
    <string name="app_name">SLIngo</string>
    <string name="sign_in">Sign In</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_enter_the_code_we_sent_you">Please enter the code we sent you</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="_919834675632">+919834675632</string>
    <string name="verify">VERIFY</string>
    <string name="resend_code">Resend Code</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receieve_an_otp">Didn\'t receieve an OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_to_proceed">Enter your email to proceed</string>
    <string name="switch_back_to">Switch back to</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_to_slingo">Welcome to SLIngo!</string>
    <string name="loading">Loading...</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="upload_your_new_profile_picture">Upload your new profile picture</string>
    <string name="choose_picture">Choose picture</string>
    <string name="upload">Upload</string>
    <string name="manual_of_signs">Manual of signs</string>
    <string name="signs">Signs</string>
</resources>