<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".signUp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_a_new_account"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/fullName"
        android:textCursorDrawable="@drawable/text_cursor"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_black_dark_blue5_15"
        android:hint="@string/full_name"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:textCursorDrawable="@drawable/text_cursor"
        android:layout_height="55dp"
        android:background="@drawable/round_black_dark_blue5_15"
        android:hint="@string/email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/mobile"
        android:textCursorDrawable="@drawable/text_cursor"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_black_dark_blue5_15"
        android:hint="@string/phone_number"
        android:maxLines="1"
        android:inputType="phone"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_black_dark_blue5_15">
        <EditText
            android:id="@+id/passwordET"
            android:textCursorDrawable="@drawable/text_cursor"
            android:layout_toStartOf="@+id/passwordIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/password_show"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_black_dark_blue5_15">
        <EditText
            android:id="@+id/conPasswordET"
            android:textCursorDrawable="@drawable/text_cursor"
            android:layout_toStartOf="@+id/conPasswordIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <ImageView
            android:id="@+id/conPasswordIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/password_show"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/primary"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/female"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>
        </RadioGroup>

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_back_primary_15"
            android:textColor="#ffff"/>
        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>