<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadProfilePicture">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_upload_profile_pic"
            android:text="@string/upload_your_new_profile_picture"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_pic_new_btn"
            android:layout_below="@+id/textview_upload_profile_pic"
            android:layout_marginTop="20dp"
            android:text="@string/choose_picture"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/image_new_profile_pic"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/profile_pic_new_btn"
            android:background="@drawable/border"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upload_profile_pic_btn"
            android:layout_below="@+id/image_new_profile_pic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/upload"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/newProfilePicBar"
            android:elevation="10dp"
            android:visibility="gone"/>
    </RelativeLayout>

</ScrollView>