<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile"
    android:background="@color/light_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateProfileHeading"
            android:layout_marginTop="30dp"
            android:text="Update your information"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_profile_name"
            android:layout_below="@+id/updateProfileHeading"
            android:text="Name"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:textSize="16sp"
            android:textColor="#555555"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_profile_name"
            android:id="@+id/editText_new_name"
            android:background="@drawable/border"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textSize="16sp"
            android:hint="Enter full name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_profile_mobile"
            android:layout_below="@+id/editText_new_name"
            android:text="Phone"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:textSize="16sp"
            android:textColor="#555555"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_profile_mobile"
            android:id="@+id/editText_new_phone"
            android:background="@drawable/border"
            android:inputType="phone"
            android:padding="6dp"
            android:textSize="16sp"
            android:hint="Enter new mobile number (without +91)"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_profile_email"
            android:layout_below="@+id/editText_new_phone"
            android:text="Email"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:textSize="16sp"
            android:textColor="#555555"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_profile_email"
            android:id="@+id/editText_new_email"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp"
            android:hint="Enter new email"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/genderRadioGroupUpdate"
            android:layout_below="@+id/editText_new_email"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/newMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/primary"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/newFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/female"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateNewProfilePicture"
            android:text="new profile picture"
            android:layout_below="@+id/genderRadioGroupUpdate"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateProfileInfo"
            android:text="Update profile"
            android:layout_below="@+id/updateNewProfilePicture"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/updateProfilePicBar"
            android:elevation="10dp"
            android:visibility="gone"/>
    </RelativeLayout>

</ScrollView>